--- a/src/css/partials/galeria.css
+++ b/src/css/partials/galeria.css
@@ -33,12 +33,14 @@ cada imagen de cada película y muestra los detalles */
 
 .movie-item:hover {
     opacity: 0.7;
+    /* position: relative; */
+    /* z-index: -1; */
     
 }
 
 .movie-item:hover .movie-item-detail {
     bottom: 0;
-    z-index: -1;
+    /* z-index: -1; */
 }
 
 /* Agrega una estrella al lado del subtitulo */
