--- a/src/views/contacto.html
+++ b/src/views/contacto.html
@@ -22,6 +22,7 @@
 <body>
   <!-- Encabezado -->
   <header class="header">
+    <div class="btn_menu icon-menu"></div>
     <nav class="menu">
       <!-- Logo -->
       <div id="logo">
@@ -65,8 +66,8 @@
   <main class="main">
     <section id="banner-register" class="d-flex">
       <div class="card-banner container">
-
-
+        <h1>contacto</h1>
+      </div>
 
     </section>
 
