--- a/src/views/quienes-somos.html
+++ b/src/views/quienes-somos.html
@@ -20,6 +20,7 @@
 
 <body>
   <header class="header">
+    <div class="btn_menu icon-menu"></div>
     <nav class="menu">
       <!-- Logo -->
       <div id="logo">
