--- a/src/css/partials/form_register.css
+++ b/src/css/partials/form_register.css
@@ -124,7 +124,9 @@
     font-family: "Noto Serif", sans-serif;
 
 }
-
+.form-help a{
+    color: white;
+}
 /* --------------------- PARA EVALUAR CATEGORIA */
 .d-form {
     width: 100%;
