--- a/src/views/productos.html
+++ b/src/views/productos.html
@@ -19,6 +19,7 @@
 </head>
 <body>
   <header class="header">
+    <div class="btn_menu icon-menu"></div>
     <nav class="menu">
       <!-- Logo -->
       <div id="logo">
