--- a/src/css/partials/header.css
+++ b/src/css/partials/header.css
@@ -4,7 +4,7 @@
   }
 
   25% {
-    transform: scale(1.2);
+    transform: scale(1.1);
   }
 
   50% {
@@ -12,7 +12,7 @@
   }
 
   75% {
-    transform: scale(1.2);
+    transform: scale(1.1);
   }
 
   100% {
@@ -262,7 +262,7 @@ repetitivo, mejorando la interacción visual cuando se interactúa con ese eleme
   justify-content: center;
   align-items: center;
 }
-/* @media screen and (max-width: 768px){ */
+
 @media screen and (max-width: 480px) {
 
 .logoTextoImg{
@@ -271,7 +271,6 @@ repetitivo, mejorando la interacción visual cuando se interactúa con ese eleme
   flex-direction: column;
   align-items: center;
   justify-content: center;
- 
 
 }
 
@@ -288,6 +287,11 @@ repetitivo, mejorando la interacción visual cuando se interactúa con ese eleme
     display: none;
   }
 
+  .header .listaNav .contacto{
+    display: flex;
+
+  }
+
   .header .listaNav .linkNav,
   .header .listaNav ul .lista {
     display: flex;
@@ -303,31 +307,18 @@ repetitivo, mejorando la interacción visual cuando se interactúa con ese eleme
 
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1123px) {
-  .header .listaNav .lista {
-    display: none;
-  }
 
-  .header .listaNav .linkNav,
-  .header .listaNav ul .lista {
-    display: flex;
-    /* text-size-adjust: 1; */
-  }
-
-
-  .menu {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    /* lex-wrap: wrap; */
-  }
-}
 
 @media screen and (min-width: 481px) and (max-width: 767px) {
   .header .listaNav .lista {
     display: none;
   }
 
+  .header .listaNav .contacto{
+    display: flex;
+
+  }
+
   .header .listaNav .linkNav,
   .header .listaNav ul .lista {
     display: flex;
@@ -345,6 +336,20 @@ repetitivo, mejorando la interacción visual cuando se interactúa con ese eleme
 
 
 }
+
+
+@media screen and (min-width: 768px) and (max-width: 1123px) {
+
+
+  .menu {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+  }
+}
+
+
 
 .icon_logo_container {
   position: relative;
