--- a/src/views/contacto.html
+++ b/src/views/contacto.html
@@ -26,7 +26,7 @@
     <nav class="menu">
       <!-- Logo -->
       <div id="logo">
-        <a href="/">
+        <a href="../index.html#">
           <!-- <i class="fa-solid fa-futbol"></i> -->
 
           <span class="logo-text">CAMPEONES DEL MUNDO</span>
@@ -42,7 +42,7 @@
         <li><a class="lista" href="../index.html#galeria">Galería</a></li>
         <li><a class="lista" href="../index.html#productos">Productos</a></li>
         <li><a class="lista" href="../index.html#quienes-somos">Quienes Somos</a></li>
-        <li><a class="lista" href="../views/contacto.html">Contacto</a></li>
+        <li><a class="lista contacto" href="../views/contacto.html">Contacto</a></li>
         <li class="sub_menu">
           <a class="linkNav Login lista" href="#">Login</a>
           <!-- menu desplegable -->
