--- a/src/views/contacto.html
+++ b/src/views/contacto.html
@@ -1,111 +1,44 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- vinculación con estilos y favicon -->
+    <!-- <link rel="stylesheet" href="../static/css/style.css" /> -->
+    <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon" />
+    <title>Campeones del Mundo</title>
+    <!-- vinculación con google-fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../css/home.css" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- vinculación con estilos y favicon -->
-  <!-- <link rel="stylesheet" href="../static/css/style.css" /> -->
-  <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon" />
-  <title>Campeones del Mundo</title>
-  <!-- vinculación con google-fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet" />
-  <link rel="stylesheet" href="../css/home.css" />
+    <!-- vinculación fontawesome -->
+    <script
+      src="https://kit.fontawesome.com/f7fb471b65.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-  <!-- vinculación fontawesome -->
-  <script src="https://kit.fontawesome.com/f7fb471b65.js" crossorigin="anonymous"></script>
-</head>
-
-<body>
-  <!-- Encabezado -->
-  <header class="header">
-    <div class="btn_menu icon-menu"></div>
-    <nav class="menu">
-      <!-- Logo -->
-      <div id="logo">
-        <a href="../index.html#">
-          <!-- <i class="fa-solid fa-futbol"></i> -->
-
-          <span class="logo-text">CAMPEONES DEL MUNDO</span>
-          <div class="icon_logo_container">
-            <img src="../img/Golden-Sta.png" class="icon_logo" alt="imagen de 3 Estrellas">
-            <img src="../img/Golden-Sta.png" class="logo_logo_reflejo" alt="imagen de 3 Estrellas">
-          </div>
-        </a>
-      </div>
-      <!-- hipervínculos del menú -->
-      <ul class="listaNav">
-        <li><a class="lista" href="../index.html#">Inicio</a></li>
-        <li><a class="lista" href="../index.html#galeria">Galería</a></li>
-        <li><a class="lista" href="../index.html#productos">Productos</a></li>
-        <li><a class="lista" href="../index.html#quienes-somos">Quienes Somos</a></li>
-        <li><a class="lista contacto" href="../views/contacto.html">Contacto</a></li>
-        <li class="sub_menu">
-          <a class="linkNav Login lista" href="#">Login</a>
-          <!-- menu desplegable -->
-          <div class="sub_menu_aux">
-            <div class="punto">
-              <!-- <div class="sub_menu_aux_2"> -->
-              <ul class="dropdown-content">
-                <li class="listaItem">
-                  <a class="lista" href="../views/iniciar-sesion.html">Iniciar sesión</a>
-                </li>
-                <li class="listaItem">
-                  <a class="lista" href="../views/register.html">Registrarse</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </li>
-      </ul>
-    </nav>
-  </header>
-  <main class="main">
-    <section id="banner-register" class="d-flex">
-      <div class="card-banner container">
-        <h1>contacto</h1>
-      </div>
-
-    </section>
-
-
-  </main>
-  <footer class="footer-container">
-    <div class="footer">
-      <div class="col-1">
-        <strong>Mas sobre nosotros</strong>
-        <p>politicas de privacidad</p>
-        <p>terminos de uso</p>
-        <p>soporte tecnico de la web</p>
-      </div>
-
-      <div class="col-2">
-        <strong>Redes sociales</strong>
-        <div class="lista-iconos">
-          <span class="social-1"></span>
-          <span class="social-2"></span>
-          <!-- <span class="social-3"></span> -->
-          <span class="social-4"></span>
-          <!-- <span class="social-5"></span> -->
+  <body>
+    <!-- Encabezado -->
+    <header class="header" id="idHeaderSecciones">
+       <!-- Agregado por JS -->
+    </header>
+    <main class="main">
+      <section id="banner-register" class="d-flex">
+        <div class="card-banner container">
+          <h1>contacto</h1>
         </div>
-      </div>
-      <div class="col-3">
-        <strong>descarga nuestras app</strong>
-        <img src="../img/download_app.png" alt="">
-        <img src="../img/google_play.png" alt="">
-      </div>
-    </div>
-  </footer>
-  <!-- <footer class="footer-contacto" id="footer">
-    <a href="">Términos y condiciones</a>
-    <a href="">Preguntas Frecuentes</a>
-    <a href="">Ayuda</a>
-  </footer> -->
-  <!-- este codigo genera espacios en lanco para generar una separación=> &nbsp; -->
+      </section>
+    </main>
+    <footer class="footer-container" id="idFooter">
+       <!-- Agregado por JS -->
+    </footer>
 
-</body>
-
+    <script src="../JS/index.js"></script>
+  </body>
 </html>
