--- a/src/views/register.html
+++ b/src/views/register.html
@@ -84,7 +84,7 @@
 
 
   </main>
-  <footer class="footer-container" id="idFooter">
+  <footer class="footer-container" id="idFooterSecciones">
  <!-- Agregado por JS -->
   </footer>
  
