Estilos para pagina API

--- a/src/views/paginaApi.html
+++ b/src/views/paginaApi.html
@@ -4,22 +4,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="../css/stylePaginaApi.css">
-  <title>Llamados externos con Fetch</title>
+  <link rel="stylesheet" href="../css/home.css" />
+  <title>Datos de Jugadores</title>
 </head>
 <body>
-  <header>
-    <h1 class="header__title">Rick and Morty API project</h1>
+  <header class="header" id="idHeaderSecciones">
+   
   </header>
   <!-- ZONA DE RENDERIZADO -->
   <main id="contenedor-tarjetas" class="contenedor-tarjetas">
+    <h2 class="header__title ">Conecé más de las grandes estrellas de la selección</h2>
   </main>
    <!-- FIN ZONA DE RENDERIZADO -->
-  <footer>
-    <p>Made with ❤️ by Codo a Codo FullStack NodeJS 2024 </p>
+  <footer class="footer-container" id="idFooterSecciones">
+ 
   </footer>
 <!--Zona Script-->
   <script src="../JS/fetch.js"></script>
+  <script src="../JS/index.js"></script>
 <!--Zona Fontawesome-->
   <script src="https://kit.fontawesome.com/fa04600604.js" crossorigin="anonymous"></script>
   
