--- a/src/css/stylePaginaApi.css
+++ b/src/css/stylePaginaApi.css
@@ -4,7 +4,7 @@
 * {
   margin: 0;
   padding: 0;
-  /*box-sizing: border-box;*/
+
 }
 
 body {
@@ -15,22 +15,11 @@ body {
   grid-template-rows: auto 1fr auto;
 }
 
-header {
-  position: relative;
-  align-items: center;
-  padding: 5rem 4rem;
-  background-image: url('../img/MLL9xUy.png');
-  background-size: cover;
-  background-position: left ;
-  background-repeat: no-repeat;
-  color: snow;
-  text-align: left;
-}
 
 .header__title {
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  color: snow;
-  font-size: 5rem;
+  color: rgb(51, 60, 182);
+  font-size: 3rem;
   text-align: left;
 }
 
@@ -49,6 +38,8 @@ main{
   gap: 2rem;
 }
 
+
+
 .tarjeta{
   max-width: 30%;
   min-width: 200px;
@@ -56,7 +47,7 @@ main{
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  background-color: #F2C335;
+  background-color: rgba(117, 170, 219);
   overflow: hidden;
 }
 
@@ -65,7 +56,7 @@ main{
 label{
   font-size: 0.8rem;
   font-weight: bold;
-  color: darkgray;
+  color: #002e55;
 }
 
 .status {
@@ -85,14 +76,6 @@ label{
 
 .unknown {
   font-size: 8px;
-  color: gray;
+  color: rgb(109, 103, 103);
 }
 
-footer{
-  display: grid;
-  place-items: center;
-  font-size: 1.2rem;
-  text-align: center;
-  color: snow;
-  background-color: #402319;
-}
